--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             vitae quam fugit.</p>
 
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li> git add .</li>
+            <li>git commit -m" add a meaningful commit </li>
+        </ul>
+    </div>
     
 </body>
 </html>
