added the third blog

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <h3>How to push incremental code</h3>
         <ul>
             <li> git add .</li>
-            <li>git commit -m" add a meaningful commit </li>
+            <li>git commit -m" add a meaningful commit message"</li>
+            <li>git push</li>
         </ul>
     </div>
     
